--- a/src/Sustain/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Profiles{% endblock %}
 
 {% block body -%}
+    <div class="col-sm-12">
         <h1>Profiles</h1>
 
         <div class="alert alert-info alert-dismissible" role="alert">
@@ -32,4 +33,6 @@
             {% endfor %}
             </tbody>
         </table>
+    </div>
+
 {% endblock %}
