--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -44,6 +44,7 @@
         <div class="row">
             <div class="col-sm-4 ">
                 <h2>Events</h2>
+                <a title="Events" href="{{ path('event') }}">All upcoming events</a>
                 {% for event in events %}
                     <h3>{{ event.title }}</h3>
                     <p>{{ event.datetime|date('l, F jS, Y: g:ia') }}</p>
@@ -51,6 +52,17 @@
                     {% else %}
                     <p>There are no events at this time. Please check back soon.</p>
                 {% endfor %}
+                <a class="twitter-timeline" href="https://twitter.com/UGAEnglish" data-widget-id="504275673385406465">Tweets
+                    by @UGAEnglish</a>
+                <script>!function (d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                        if (!d.getElementById(id)) {
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = p + "://platform.twitter.com/widgets.js";
+                            fjs.parentNode.insertBefore(js, fjs);
+                        }
+                    }(document, "script", "twitter-wjs");</script>
             </div><!-- /.col-lg-4 -->
             <div class="col-sm-4 ">
                 <h2>Stories</h2>
@@ -80,18 +92,11 @@
                             a member of the community, or a faculty member in the email. </p>
                     </div>
                 </div>
-                <h2>Twitter</h2>
-                <a class="twitter-timeline" href="https://twitter.com/UGAEnglish" data-widget-id="504275673385406465">Tweets
-                    by @UGAEnglish</a>
-                <script>!function (d, s, id) {
-                        var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-                        if (!d.getElementById(id)) {
-                            js = d.createElement(s);
-                            js.id = id;
-                            js.src = p + "://platform.twitter.com/widgets.js";
-                            fjs.parentNode.insertBefore(js, fjs);
-                        }
-                    }(document, "script", "twitter-wjs");</script>
+                <h3>Watch our Introductory Video</h3>
+                <div class="embed-responsive embed-responsive-4by3">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mZvlSWSNsJw?rel=0"
+                            frameborder="0" allowfullscreen></iframe>
+                </div>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
