--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -28,6 +28,11 @@ h1, h2, h3 {
 .col-sm-2 {
     padding: 1rem;
 }
+
+.card-img-top{
+    width:100%;
+    height:auto;
+}
 /**********  Accessibility **********/
 #skip a, #skip a:hover, #skip a:visited
 {
