--- a/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Opportunity/index.html.twig
@@ -8,26 +8,23 @@
         {% endif %}
 
         {% for entity in entities %}
-            <div class="col-sm-12">
-                <div class="col-sm-10">
-                    <h2 style="display:inline">
-                        {{ entity.title }}
-                    </h2>
+            <div class="card">
+                <div class="card-block"
+                <h2>{{ entity.title }}</h2>
 
+                <p>{{ entity.teaser|raw }}</p>
+                {% if entity.description != '' %}
                     <p>
-                        {{ entity.teaser|raw }}
+                        <a href="{{ path('opportunity_show', { 'id': entity.id }) }}">Read the full description.</a>
                     </p>
-                    {% if entity.description != '' %}
-                        <p>
-                            <a class=""
-                               href="{{ path('opportunity_show', { 'id': entity.id }) }}">Read the full description.</a>
-                        </p>
-                    {% endif %}
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                <a class="btn btn-primary" href="{{ path('opportunity_edit', { 'id': entity.id }) }}">Edit</a>
+                {% endif %}
                 </div>
-                {% if is_granted('ROLE_ADMIN') %}<a class="btn btn-primary"
-                                                    href="{{ path('opportunity_edit', { 'id': entity.id }) }}">
-                        Edit</a>{% endif %}
             </div>
+
         {% endfor %}
     </div>
+
 {% endblock %}
