--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -1,61 +1,86 @@
-{% extends 'AppBundle::layout.html.twig' %}
-
+{% extends '::base.html.twig' %}
 
 
 {% block body -%}
-    <div class="col-sm-10">
+    <div class="col-sm-12">
 
-        <h1>Stories</h1>
-
-
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
-            {% for entity in entities %}
-                <div class="card">
-                    <div class="card-block" role="tab" id="headingOne">
-                        <div class="row">
-                            <div class="col-sm-10">
-                                {% if is_granted('ROLE_ADMIN') %}
-                                    <a class="btn btn-primary btn-sm pull-right"
-                                       href="{{ path('section_edit', { 'id': entity.id }) }}">Edit
-                                    </a>
-                                {% endif %}
-                                <h3 class="inline"><a title="click to open this section" role="button"
-                                                      data-toggle="collapse" data-parent="#accordion"
-                                                      href="#collapse{{ loop.index }}" aria-expanded="true"
-                                                      aria-controls="collapse{{ loop.index }}">
-                                        {{ entity.name|raw }}
-                                    </a></h3>
-                                {{ entity.info|raw }}
-                            </div>
-                            <div class="col-sm-2">
-                                <img class="img-responsive pull-right" src="{{ entity.image }}"/>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="collapse{{ loop.index }}" class="panel-collapse collapse" role="tabpanel"
-                         aria-labelledby="heading{{ loop.index }}">
-                        <div class="card-block">
-                            {% for page in entity.pages %}
-                                <div class="row">
-                                    <div class="col-sm-10">
-                                        <h3 class="inline"><a
-                                                    href="{{ path('page_show', { 'id': page.id }) }}">{{ page.menuName|raw }}</a>
-                                        </h3>
-                                        {{ page.teaser|raw }}
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <img class="img-responsive pull-right" src="{{ page.teaserImage }}"/>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
+        {% for entity in entities %}
+            <div class="row">
+                <div class="jumbotron">
+                    <div class="container">
+                        <h2 class="display-4">{{ entity.name|raw }}</h2>
+                        <p>{{ entity.info|raw }}</p>
                     </div>
                 </div>
-            {% endfor %}
 
 
-        </div>
+                <div class="col-sm-4">
+
+                    {% for page in entity.pages %}
+                        {% if loop.index <= entity.pages|length/3 %}
+                            <h3>{{ page.teaserImageCaption }}</h3>
+                            <a href="{{ path('page_show', {id:page.id}) }}"
+                               title="Read more about {{ page.menuName }} ">
+                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                     alt="{{ page.menuName }}">
+                            </a>
+
+                            <div class="caption">
+                                <p>{{ page.teaser|raw }}</p>
+                            </div>
+                            <a href="{{ path('page_show', {id:page.id}) }}"
+                               title="Read more about {{ page.menuName }} ">
+                                Read more about {{ page.teaserImageCaption }}
+                            </a>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+
+                <div class="col-sm-4">
+                    {% for page in entity.pages %}
+                        {% if loop.index > entity.pages|length/3 and  loop.index <= entity.pages|length/3*2 %}
+                            <h3>{{ page.teaserImageCaption }}</h3>
+                            <a href="{{ path('page_show', {id:page.id}) }}"
+                               title="Read more about {{ page.menuName }} ">
+                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                     alt="{{ page.menuName }}">
+                            </a>
+
+                            <div class="caption">
+                                <p>{{ page.teaser|raw }}</p>
+                            </div>
+                            <a href="{{ path('page_show', {id:page.id}) }}"
+                               title="Read more about {{ page.menuName }} ">
+                                Read more about {{ page.teaserImageCaption }}
+                            </a>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+
+                <div class="col-sm-4">
+                    {% for page in entity.pages %}
+                        {% if loop.index > entity.pages|length/3*2 %}
+                            <h3>{{ page.teaserImageCaption }}</h3>
+                            <a href="{{ path('page_show', {id:page.id}) }}"
+                               title="Read more about {{ page.menuName }} ">
+                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                     alt="{{ page.menuName }}">
+                            </a>
+
+                            <div class="caption">
+                                <p>{{ page.teaser|raw }}</p>
+                            </div>
+                            <a href="{{ path('page_show', {id:page.id}) }}"
+                               title="Read more about {{ page.menuName }} ">
+                                Read more about {{ page.teaserImageCaption }}
+                            </a>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+
+            </div>
+        {% endfor %}
+
 
     </div>
 
