--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,9 @@
 
     <!-- Bootstrap CSS -->
     {% block stylesheets %}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css"
+              integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd"
+              crossorigin="anonymous">
 
         <link type="text/css" rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
         <link type="text/css" rel="stylesheet"
@@ -25,7 +27,8 @@
 
 <div class="container-fluid">
     <nav class="navbar navbar-default">
-        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
+                data-target="#exCollapsingNavbar">
             &#9776;
         </button>
         <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar">
@@ -35,11 +38,11 @@
                 <li class="nav-item" id="skip">
                     <a id="main_nav" href="#main_content">Skip Navigation</a>
                 </li>
-                <li class="nav-item" id="faq"><a href="{{ path('section') }}">Stories</a></li>
-                <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':1 }) }}">Faculty</a></li>
+                <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':14 }) }}">Faculty</a></li>
+                <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':41 }) }}">Students</a></li>
+                <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':42 }) }}">Community</a></li>
                 <li class="nav-item" id="file"><a title="Courses" href="{{ path('module') }}">Resources</a></li>
-                <li class="nav-item" id="mapset"><a href="{{ path('mapset') }}">Maps</a></li>
-                <li class="nav-item" id="user"><a href="{{ path('public_profiles') }}">Profiles</a></li>
+                <li class="nav-item" id="faq"><a href="{{ path('section') }}">Stories</a></li>
                 <li class="nav-item" id="user"><a href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
             </ul>
 
@@ -75,16 +78,18 @@
         {% block javascripts %}
             <!-- jQuery first, then Bootstrap JS. -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"
+                    integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7"
+                    crossorigin="anonymous"></script>
             <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/tinysort/2.2.2/tinysort.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.22.5/js/jquery.tablesorter.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.22.5/js/jquery.tablesorter.widgets.min.js"></script>
         {% endblock %}
 
-</div>
-</div>
+    </section>
 
+</div>
 
 </body>
 </html>
