--- a/src/Sustain/AppBundle/Resources/views/Shared/new.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Shared/new.html.twig
@@ -1,8 +1,9 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <h1>Page creation</h1>
+<div class="col-sm-10">
+    <h1>Creation</h1>
 
     {{ form(form) }}
-
+</div>
 {% endblock %}
