--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -61,6 +61,26 @@ h1, h2, h3 {
     margin-bottom: -10px;
 }
 
+/**********  Forms **********/
+
+
+div.radio > label {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.radio input[type="radio"] {
+    position: inherit;
+    margin-left: 10px;
+}
+
+form div div {
+    margin-bottom: 20px;
+}
+
+input + label {
+    margin-right: 15px;
+}
 
 /********** Media Queries **********/
 
@@ -92,7 +112,7 @@ h1, h2, h3 {
 
 .sidebar {
     background-color: #154d81;
-    height: 95vh;
+    min-height: 100vh;
     color: #ecf0f1;
 }
 
