--- a/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
@@ -28,7 +28,7 @@
 {% block title %}Maps{% endblock %}
 
 {% block body -%}
-    <div class="col-sm-offset-1  col-sm-10 well">
+    <div class="col-sm-10 ">
         <h2>{{ entity.name }}</h2>
 
         <p class="">{{ entity.description|raw }}</p>
@@ -41,10 +41,12 @@
                 <a href="{{ path('map_new') }}" class="btn btn-primary pull-right">Add Pin</a>
             {% endif %}
         {% endif %}
+
+        <div id="map_canvas" style="height:75vh;">
+
+        </div>
     </div>
 
-    <div id="map_canvas" class="col-sm-offset-1 col-sm-10 well" style="height:85vh; margin-top:-20px;">
 
-    </div>
 
 {% endblock %}
