--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -3,9 +3,8 @@
 {% block title %}Modules{% endblock %}
 
 {% block body -%}
-    <h1 style="display: inline-block;">Modules</h1>
-
-    <div class="col-sm-12">
+    <div class="col-sm-10">
+        <h1>Modules</h1>
 
         <h2>{{ entity.name }}</h2>
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
@@ -24,45 +23,47 @@
 
         <h2>Core Resources</h2>
 
-            <table id="file_list" class="col-sm-12 table">
-                <thead>
-                <tr class="file">
-                    <th><span>Title</span></th>
-                    <th class="hidden-xs">Labels</th>
-                </tr>
-                </thead>
-                <tbody>
+        <table id="file_list" class="col-sm-12 table">
+            <thead>
+            <tr class="file">
+                <th><span>Title</span></th>
+                <th class="hidden-xs">Labels</th>
+            </tr>
+            </thead>
+            <tbody>
 
-                {% for file in entity.files if file.core==1 %}
-                    <tr>
-                        <td>
-                            {% if file.url is null %}
-                                <span class="label label-info" data-toggle="tooltip" title="This an {{ file.ext }} file ">{{ file.ext }}</span>
-                                <a class="" href="{{ path('file_get', { 'id': file.id}) }}" title="View {{ file.name }}">
-                                    {{ file.name }}
-                                </a>
-                            {% else %}
-                                <span class="label label-info" data-toggle="tooltip" title="This an link to a resource">Link</span>
-                                <a class="" href="{{ file.url }}" title="Go to  {{ file.name }}" target="_blank">
-                                    {{ file.name }}
-                                </a>
-                            {% endif %}
-                        </td>
-                        <td class="labels hidden-xs">
-                            {% for tag in file.tags %}
-                                <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
+            {% for file in entity.files if file.core==1 %}
+                <tr>
+                    <td>
+                        {% if file.url is null %}
+                            <span class="label label-info" data-toggle="tooltip"
+                                  title="This an {{ file.ext }} file ">{{ file.ext }}</span>
+                            <a class="" href="{{ path('file_get', { 'id': file.id}) }}" title="View {{ file.name }}">
+                                {{ file.name }}
+                            </a>
+                        {% else %}
+                            <span class="label label-info" data-toggle="tooltip"
+                                  title="This an link to a resource">Link</span>
+                            <a class="" href="{{ file.url }}" title="Go to  {{ file.name }}" target="_blank">
+                                {{ file.name }}
+                            </a>
+                        {% endif %}
+                    </td>
+                    <td class="labels hidden-xs">
+                        {% for tag in file.tags %}
+                            <span class="label label-default margin-right" style="background-color: {{ tag.color }};">
                                 {{ tag.name }}
                                 </span>
-                            {% endfor %}
-                        </td>
-                    </tr>
-                {% else %}
-                    <div class="alert alert-info">
-                        This module does not have any core resources. Please check back.
-                    </div>
-                {% endfor %}
-                </tbody>
-            </table>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% else %}
+                <div class="alert alert-info">
+                    This module does not have any core resources. Please check back.
+                </div>
+            {% endfor %}
+            </tbody>
+        </table>
 
 
         <h2>Learning Objectives</h2>
@@ -94,12 +95,14 @@
                 <tr>
                     <td>
                         {% if file.url is null %}
-                            <span class="label label-info" data-toggle="tooltip" title="This an {{ file.ext }} file ">{{ file.ext }}</span>
+                            <span class="label label-info" data-toggle="tooltip"
+                                  title="This an {{ file.ext }} file ">{{ file.ext }}</span>
                             <a class="" href="{{ path('file_get', { 'id': file.id}) }}" title="View {{ file.name }}">
                                 {{ file.name }}
                             </a>
                         {% else %}
-                            <span class="label label-info" data-toggle="tooltip" title="This an link to a resource">Link</span>
+                            <span class="label label-info" data-toggle="tooltip"
+                                  title="This an link to a resource">Link</span>
                             <a class="" href="{{ file.url }}" title="Go to  {{ file.name }}" target="_blank">
                                 {{ file.name }}
                             </a>
