--- a/src/Sustain/AppBundle/Resources/views/Objective/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Objective/show.html.twig
@@ -5,8 +5,9 @@
 
 
 {% block body -%}
-    <h1 style="display: inline-block;">Learning Objectives</h1>
-    <div class="col-sm-12">
+    <div class="col-sm-10">
+        <h1>Learning Objectives</h1>
+
 
         <h2>{{ entity.objective|raw }}</h2>
 
@@ -60,12 +61,14 @@
                 <tr class="file">
                     <td>
                         {% if file.url is null %}
-                            <span class="label label-info" data-toggle="tooltip" title="This an {{ file.ext }} file ">{{ file.ext }}</span>
+                            <span class="label label-info" data-toggle="tooltip"
+                                  title="This an {{ file.ext }} file ">{{ file.ext }}</span>
                             <a class="" href="{{ path('file_get', { 'id': file.id}) }}" title="View {{ file.name }}">
                                 {{ file.name }}
                             </a>
                         {% else %}
-                            <span class="label label-info" data-toggle="tooltip" title="This an link to a resource">Link</span>
+                            <span class="label label-info" data-toggle="tooltip"
+                                  title="This an link to a resource">Link</span>
                             <a class="" href="{{ file.url }}" title="Go to  {{ file.name }}" target="_blank">
                                 {{ file.name }}
                             </a>
@@ -89,7 +92,8 @@
 
         <div class="list-group">
             {% for entity in entity.activities %}
-                <a href="{{ path('activity_show', { 'id': entity.id}) }}" class="list-group-item" title="Show details for this activity">
+                <a href="{{ path('activity_show', { 'id': entity.id}) }}" class="list-group-item"
+                   title="Show details for this activity">
                     <h2 class="inline">{{ entity.title }}</h2>
                     <p class="list-group-item-text">{{ entity.description|raw }}</p>
                 <span class="labels hidden-xs">
@@ -102,10 +106,6 @@
                 </a>
             {% endfor %}
         </div>
-
-
-
-
 
 
     </div>
