--- a/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Section/index.html.twig
@@ -8,6 +8,11 @@
             <div class="row">
                 <div class="jumbotron">
                     <div class="container">
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <div class="pull-sm-right">
+                                <a class="btn btn-primary" href="{{ path('section_edit', { 'id': entity.id }) }}">Edit</a>
+                            </div>
+                        {% endif %}
                         <h2 class="display-5">{{ entity.name|raw }}</h2>
                         <p>{{ entity.info|raw }}</p>
                     </div>
@@ -18,20 +23,22 @@
 
                     {% for page in entity.pages %}
                         {% if loop.index <= entity.pages|length/3 %}
-                            <h3>{{ page.teaserImageCaption }}</h3>
-                            <a href="{{ path('page_show', {id:page.id}) }}"
-                               title="Read more about {{ page.menuName }} ">
-                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                     alt="{{ page.menuName }}">
-                            </a>
+                            <div class="card card-block">
+                                <h3>{{ page.teaserImageCaption }}</h3>
+                                <a href="{{ path('page_show', {id:page.id}) }}"
+                                   title="Read more about {{ page.menuName }} ">
+                                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                         alt="{{ page.menuName }}">
+                                </a>
 
-                            <div class="caption">
-                                <p>{{ page.teaser|raw }}</p>
+                                <div class="caption">
+                                    <p>{{ page.teaser|raw }}</p>
+                                </div>
+                                <a href="{{ path('page_show', {id:page.id}) }}"
+                                   title="Read more about {{ page.menuName }} ">
+                                    Read more about {{ page.teaserImageCaption }}
+                                </a>
                             </div>
-                            <a href="{{ path('page_show', {id:page.id}) }}"
-                               title="Read more about {{ page.menuName }} ">
-                                Read more about {{ page.teaserImageCaption }}
-                            </a>
                         {% endif %}
                     {% endfor %}
                 </div>
@@ -39,20 +46,22 @@
                 <div class="col-sm-4">
                     {% for page in entity.pages %}
                         {% if loop.index > entity.pages|length/3 and  loop.index <= entity.pages|length/3*2 %}
-                            <h3>{{ page.teaserImageCaption }}</h3>
-                            <a href="{{ path('page_show', {id:page.id}) }}"
-                               title="Read more about {{ page.menuName }} ">
-                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                     alt="{{ page.menuName }}">
-                            </a>
+                            <div class="card card-block">
+                                <h3>{{ page.teaserImageCaption }}</h3>
+                                <a href="{{ path('page_show', {id:page.id}) }}"
+                                   title="Read more about {{ page.menuName }} ">
+                                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                         alt="{{ page.menuName }}">
+                                </a>
 
-                            <div class="caption">
-                                <p>{{ page.teaser|raw }}</p>
+                                <div class="caption">
+                                    <p>{{ page.teaser|raw }}</p>
+                                </div>
+                                <a href="{{ path('page_show', {id:page.id}) }}"
+                                   title="Read more about {{ page.menuName }} ">
+                                    Read more about {{ page.teaserImageCaption }}
+                                </a>
                             </div>
-                            <a href="{{ path('page_show', {id:page.id}) }}"
-                               title="Read more about {{ page.menuName }} ">
-                                Read more about {{ page.teaserImageCaption }}
-                            </a>
                         {% endif %}
                     {% endfor %}
                 </div>
@@ -60,20 +69,22 @@
                 <div class="col-sm-4">
                     {% for page in entity.pages %}
                         {% if loop.index > entity.pages|length/3*2 %}
-                            <h3>{{ page.teaserImageCaption }}</h3>
-                            <a href="{{ path('page_show', {id:page.id}) }}"
-                               title="Read more about {{ page.menuName }} ">
-                                <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
-                                     alt="{{ page.menuName }}">
-                            </a>
+                            <div class="card card-block">
+                                <h3>{{ page.teaserImageCaption }}</h3>
+                                <a href="{{ path('page_show', {id:page.id}) }}"
+                                   title="Read more about {{ page.menuName }} ">
+                                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail"
+                                         alt="{{ page.menuName }}">
+                                </a>
 
-                            <div class="caption">
-                                <p>{{ page.teaser|raw }}</p>
+                                <div class="caption">
+                                    <p>{{ page.teaser|raw }}</p>
+                                </div>
+                                <a href="{{ path('page_show', {id:page.id}) }}"
+                                   title="Read more about {{ page.menuName }} ">
+                                    Read more about {{ page.teaserImageCaption }}
+                                </a>
                             </div>
-                            <a href="{{ path('page_show', {id:page.id}) }}"
-                               title="Read more about {{ page.menuName }} ">
-                                Read more about {{ page.teaserImageCaption }}
-                            </a>
                         {% endif %}
                     {% endfor %}
                 </div>
