--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
 <body>
 
 <div class="container-fluid">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
                 data-target="#exCollapsingNavbar">
             &#9776;
@@ -41,7 +41,6 @@
                 <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':14 }) }}">Faculty</a></li>
                 <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':41 }) }}">Students</a></li>
                 <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':42 }) }}">Community</a></li>
-                <li class="nav-item" id="file"><a title="Courses" href="{{ path('module') }}">Resources</a></li>
                 <li class="nav-item" id="faq"><a href="{{ path('section') }}">Stories</a></li>
                 <li class="nav-item" id="user"><a href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
             </ul>
