--- a/src/Sustain/UserBundle/Resources/views/User/edit.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/edit.html.twig
@@ -1,8 +1,9 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Profile edit</h1>
+    <div class="col-sm-10">
+        <h1>Profile edit</h1>
 
-    {{ form(edit_form) }}
-
+        {{ form(edit_form) }}
+    </div>
 {% endblock %}
