--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container-viewport">
     <nav class="navbar navbar-default navbar-fixed-top">
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse"
                 data-target="#exCollapsingNavbar">
