--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -54,8 +54,9 @@
                         <a title="Events" href="{{ path('event') }}">See all upcoming events</a>
                         {% for event in events %}
                             <h3>{{ event.title }}</h3>
-                            <p>{{ event.datetime|date('l, F jS, Y: g:ia') }}</p>
-                            <p>{{ event.body }}</p>
+                            <p>{% if event.start %}{{ event.start|date("l, F d") }} {{ event.start|date("g:i A") }}{% endif %}</p>
+                            <p>{{ event.teaser|raw }}</p>
+                            <hr/>
                         {% else %}
                             <p>There are no events at this time. Please check back soon.</p>
                         {% endfor %}
@@ -98,6 +99,7 @@
                             <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
                                 Read more about {{ page.teaserImageCaption }}
                             </a>
+                            <hr/>
                         {% endfor %}
                     </div>
                 </div>
