--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -69,6 +69,16 @@ div.radio > label {
     margin-left: 10px;
 }
 
+div.checkbox > label {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.checkbox input[type="checkbox"] {
+    position: inherit;
+    margin-left: 15px;
+}
+
 form div div {
     margin-bottom: 20px;
 }
