file indes tweak

--- a/src/Sustain/AppBundle/Resources/views/File/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/File/index.html.twig
@@ -59,7 +59,7 @@
                         {% endif %}
                         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                             {% if file.isOwner(app.user.username) or is_granted('ROLE_ADMIN') %}
-                                <a class="pull-right" href="{{ path('file_edit', { 'id': file.id}) }}"
+                                <a class="btn btn-primary btn-sm pull-xs-right" href="{{ path('file_edit', { 'id': file.id}) }}"
                                    title="Edit {{ file.name }}">
                                     Settings
                                 </a>
