--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,6 +41,7 @@
                 <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':14 }) }}">Faculty</a></li>
                 <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':41 }) }}">Students</a></li>
                 <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':42 }) }}">Community</a></li>
+                <li class="nav-item" id="faq"><a href="{{ path('page_show', { 'id':50 }) }}">Lake Herrick</a></li>
                 <li class="nav-item" id="faq"><a href="{{ path('section') }}">Stories</a></li>
                 <li class="nav-item" id="user"><a href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
             </ul>
