contact on home

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -109,6 +109,13 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-sm-4 ">
 
+                <h2>Contact US</h2>
+                <div class="card">
+                    <div class="card-block">
+                        <p>If you have questions, please send an email to watershed@uga.edu. </p>
+                    </div>
+                </div>
+
                 <h2>Join our mailing list!</h2>
                 <div class="card">
                     <div class="card-block">
